--- a/tony.html
+++ b/tony.html
@@ -34,6 +34,16 @@
 
         <button class="contactBtn">Contact</button>
       </div>
+      <div class="skill-container">
+        <div class="skill-card">
+          <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
+          <h2>version control</h2>
+          <p>
+            deep understanding of the git workflow: including branching,
+            merging, and rebasing for collaboration
+          </p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
