adding javascript like an hacker

--- a/tony.html
+++ b/tony.html
@@ -32,7 +32,7 @@
           more at AnimaApp.com
         </p>
 
-        <button class="contactBtn">Contact</button>
+        <button class="contactBtn" id="contactBtn">Contact</button>
       </div>
       <div class="skill-container">
         <div class="skill-card">
@@ -45,5 +45,8 @@
         </div>
       </div>
     </main>
+  
   </body>
+  <script src="script.js">
+  </script>
 </html>
