adding burger btn functions

--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="OIP.jfif" alt="" />
-      <button class="btn">Contact</button>
+      <img class="logo" src="logo t.png" alt="" />
+      <button id="burger" class="btn">
+        <i class="fa-solid fa-bars"></i>
+      </button>
+      <nav id="nav" class="nav">
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="profile">
@@ -45,8 +61,6 @@
         </div>
       </div>
     </main>
-  
   </body>
-  <script src="script.js">
-  </script>
+  <script src="script.js"></script>
 </html>
