--- a/index.html
+++ b/index.html
@@ -14,9 +14,29 @@
   <body>
     <header class="header">
       <img class="logo" src="logo t.png" alt="" />
+      
+      
       <button id="burger" class="btn">
         <i class="fa-solid fa-bars"></i>
       </button>
+
+
+        <nav class="desktopNav">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+  
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+
+      <!-- Nav mobile  -->
       <nav id="nav" class="nav">
         <ul>
           <li>
