changes to container position

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
     <header class="header">
       <img class="logo" src="logo t.png" alt="" />
       
@@ -52,7 +53,7 @@
         </ul>
       </nav>
     </header>
-
+  </div>
     <main class="profile">
       <img
         class="profile-img"
