Adding grid display

--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
   </head>
   <body>
     <div class="container">
-    <header class="header">
-      <img class="logo" src="logo t.png" alt="" />
-      
-      
-      <button id="burger" class="btn">
-        <i class="fa-solid fa-bars"></i>
-      </button>
+      <header class="header">
+        <img class="logo" src="logo t.png" alt="" />
 
+        <button id="burger" class="btn">
+          <i class="fa-solid fa-bars"></i>
+        </button>
 
         <nav class="desktopNav">
           <ul>
             <li>
               <a href="#">Home</a>
             </li>
-  
+
             <li>
               <a href="#">About</a>
             </li>
@@ -37,23 +35,23 @@
           </ul>
         </nav>
 
-      <!-- Nav mobile  -->
-      <nav id="nav" class="nav">
-        <ul>
-          <li>
-            <a href="#">Home</a>
-          </li>
+        <!-- Nav mobile  -->
+        <nav id="nav" class="nav">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
 
-          <li>
-            <a href="#">About</a>
-          </li>
-          <li>
-            <a href="#">Contact</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-  </div>
+            <li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
     <main class="profile">
       <img
         class="profile-img"
@@ -72,6 +70,38 @@
         <button class="contactBtn" id="contactBtn">Contact</button>
       </div>
       <div class="skill-container">
+        <div class="skill-card">
+          <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
+          <h2>version control</h2>
+          <p>
+            deep understanding of the git workflow: including branching,
+            merging, and rebasing for collaboration
+          </p>
+        </div>
+        <div class="skill-card">
+          <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
+          <h2>version control</h2>
+          <p>
+            deep understanding of the git workflow: including branching,
+            merging, and rebasing for collaboration
+          </p>
+        </div>
+        <div class="skill-card">
+          <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
+          <h2>version control</h2>
+          <p>
+            deep understanding of the git workflow: including branching,
+            merging, and rebasing for collaboration
+          </p>
+        </div>
+        <div class="skill-card">
+          <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
+          <h2>version control</h2>
+          <p>
+            deep understanding of the git workflow: including branching,
+            merging, and rebasing for collaboration
+          </p>
+        </div>
         <div class="skill-card">
           <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
           <h2>version control</h2>
