Adding grid display

--- a/index.html
+++ b/index.html
@@ -53,22 +53,29 @@
       </header>
     </div>
     <main class="profile">
-      <img
-        class="profile-img"
-        src="https://avatars.preply.com/i/logos/i/logos/avatar_2hfhunqu7sb.jpg"
-        alt=""
-      />
 
-      <div class="info">
-        <h2>Web development</h2>
-        <h1>Senior frontent developer</h1>
-        <p>
-          This is a template Figma file, turned into code using Anima. Learn
-          more at AnimaApp.com
-        </p>
-
-        <button class="contactBtn" id="contactBtn">Contact</button>
+      <div class="container">
+        <div class="hero">
+      
+          <div class="info" >
+            <h2>Web development</h2>
+            <h1>Senior frontent developer</h1>
+            <p>
+              This is a template Figma file, turned into code using Anima. Learn
+              more at AnimaApp.com
+            </p>
+  
+  
+          </div>
+          <img
+          class="profile-img"
+          src="https://avatars.preply.com/i/logos/i/logos/avatar_2hfhunqu7sb.jpg"
+          alt=""
+        />
+        </div>
       </div>
+    
+
       <div class="skill-container">
         <div class="skill-card">
           <img src="Skills_Card_Icon.png" class="skill-img" alt="" />
